[package]
name = "k8s-auther"
version = "0.1.0"
edition = "2024"

[dependencies]
openidconnect = { version = "4.0.1", features = ["reqwest-blocking"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
open = "5.3.2"
chrono = "0.4.41"
jsonwebtoken = "9.3"
anyhow = "1.0.98"
